# mie-guard

./: CMakeLists.txt  Readme.md
config/: Readme.md  automatic_gen.md  guid_whitelist.txt.example  notify.json.example
ideas/: 1.md  2_1.md  2_2.md
kernel/: Makefile.txt  mei_guard_kmod.c
python/: analyser.py
src/: main.c
src/checks/: dmi_latency.c  dmi_latency.h  heci_monitor.c  heci_monitor.h  mei_status.c  mei_status.h  microcode_verifier.c  microcode_verifier.h
src/crypto/: sha256.h
src/platform/: linux.c  platform.h  windows.c
test/: CMakeLists.txt  test_core.c
